# rust-mini-postcode

./: Cargo.toml  README.md  build.rs  main.rs
.devcontainer/: devcontainer.json
benches/: postcodes.rs  valid_postcodes.csv
docs/: mini_postcode.d.ts  mini_postcode_bg.wasm.d.ts
pkg/: index.html  mini_postcode.js  mini_postcode_bg.wasm  package.json
script/: build  server
src/: lib.rs  main.rs  pcon.json  pconlookup.json
